--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,67 +1,65 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/background_fill"
+    android:orientation="vertical">
 
-    <ProgressBar
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/progressBar"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="126dp"
-        android:indeterminate="false"
-        android:visibility="invisible"/>
+    <ImageView
+        style="@style/AuthBackgroundImage"
+        android:contentDescription="@string/content_desc_background_image" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/edit_text_username"
-        android:hint="@string/hint_username"
-        android:layout_centerVertical="true"
-        android:gravity="center_horizontal"
-        android:layout_alignRight="@+id/edit_text_password"
-        android:layout_alignEnd="@+id/edit_text_password"
-        android:layout_alignLeft="@+id/edit_text_password"
-        android:layout_alignStart="@+id/edit_text_password" />
+    <TextView
+        android:id="@+id/text_view_title"
+        style="@style/AuthTitle" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
-        android:id="@+id/edit_text_password"
-        android:hint="@string/hint_password"
-        android:layout_below="@+id/edit_text_username"
-        android:layout_centerHorizontal="true"
-        android:gravity="center_horizontal" />
+    <TextView
+        android:id="@+id/text_view_subtitle"
+        style="@style/AuthSubtitle" />
 
     <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/edit_text_password"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        >
+        android:id="@+id/editTextLayout"
+        style="@style/AuthFieldContainer">
 
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/button_signup"
-            android:id="@+id/button_signup"
-            android:layout_weight="1"
-             />
+        <EditText
+            android:id="@+id/edit_text_username"
+            style="@style/AuthEditText">
 
-        <Button
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:text="@string/button_login"
-            android:id="@+id/button_login"
-            />
+            <requestFocus />
+        </EditText>
+
+        <EditText
+            android:id="@+id/edit_text_password"
+            android:hint="@string/hint_password"
+            android:inputType="textPassword"
+            style="@style/AuthEditText"/>
+
     </LinearLayout>
 
+    <Button
+        android:id="@+id/button_login"
+        style="@style/AuthButton"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/editTextLayout"
+        android:text="@string/button_login" />
+
+    <TextView
+        android:id="@+id/text_view_signup"
+        style="@style/AuthSignupAndForgotPasword"
+        android:layout_below="@id/button_login"
+        android:text="@string/signup_label" />
+
+    <TextView
+        android:id="@+id/text_view_forgot_password"
+        style="@style/AuthSignupAndForgotPasword"
+        android:layout_below="@id/text_view_signup"
+        android:text="@string/recover_password_label" />
+
+    <ProgressBar
+        android:id="@+id/progressBar1"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="invisible" />
 </RelativeLayout>
