--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -1,84 +1,69 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity">
+    android:layout_height="match_parent"
+    style="@style/AuthBackground">
 
-    <ProgressBar
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/progressBar"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="126dp"
-        android:indeterminate="false"
-        android:visibility="invisible"/>
-
-
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/edit_text_username"
-        android:hint="@string/hint_username"
-        android:layout_centerVertical="true"
-        android:gravity="center_horizontal"
-        android:layout_alignRight="@+id/edit_text_password"
-        android:layout_alignEnd="@+id/edit_text_password"
-        android:layout_alignLeft="@+id/edit_text_password"
-        android:layout_alignStart="@+id/edit_text_password" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
-        android:id="@+id/edit_text_password"
-        android:hint="@string/hint_password"
-        android:layout_below="@+id/edit_text_username"
-        android:layout_centerHorizontal="true"
-        android:gravity="center_horizontal" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
-        android:ems="10"
-        android:id="@+id/edit_text_email"
-        android:hint="@string/hint_email"
-        android:layout_below="@+id/edit_text_password"
-        android:layout_centerHorizontal="true"
-        android:gravity="center_horizontal" />
-
-
-
-
+    <ImageView
+        style="@style/AuthBackgroundImage"
+        android:contentDescription="@string/content_desc_background_image" />
+    <TextView
+        android:id="@+id/text_view_title"
+        style="@style/AuthTitle" />
+    <TextView
+        android:id="@+id/text_view_subtitle"
+        style="@style/AuthSubtitle" />
     <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/edit_text_email"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        >
-
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/button_signup"
-            android:id="@+id/button_signup"
-            android:layout_weight="1"
-             />
-
-        <Button
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:text="@string/button_cancel"
-            android:id="@+id/button_cancel"
-            />
+        android:id="@+id/editTextLayout"
+        style="@style/AuthFieldContainer" >
+        <EditText
+            android:id="@+id/edit_text_username"
+            style="@style/AuthEditText"
+            android:hint="@string/hint_username" >
+            <requestFocus />
+        </EditText>
+        <EditText
+            android:id="@+id/edit_text_password"
+            style="@style/AuthEditText"
+            android:hint="@string/hint_password"
+            android:inputType="textPassword" />
+        <EditText
+            android:id="@+id/edit_text_email"
+            style="@style/AuthEditText"
+            android:hint="@string/hint_email"
+            android:inputType="textEmailAddress" />
     </LinearLayout>
+    <ImageView
+        android:id="@+id/buttonDivider"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/editTextLayout"
+        android:layout_centerHorizontal="true"
+        android:contentDescription="@string/content_desc_button_divider"
+        android:src="@drawable/button_divider" />
+    <Button
+        android:id="@+id/button_signup"
+        style="@style/AuthButton"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/editTextLayout"
+        android:layout_marginRight="0dp"
+        android:layout_toLeftOf="@id/buttonDivider"
+        android:text="@string/button_signup" />
+    <Button
+        android:id="@+id/button_cancel"
+        style="@style/AuthButton"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/editTextLayout"
+        android:layout_marginLeft="0dp"
+        android:layout_toRightOf="@id/buttonDivider"
+        android:text="@string/button_cancel" />
+    <ProgressBar
+        android:id="@+id/progressBar1"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="invisible" />
+
 
 
 
